syntax = "proto3";

package minicloud.common;

option java_package = "com.minicloud.proto.common";
option java_outer_classname = "CommonProto";

import "google/protobuf/timestamp.proto";

// Standard response wrapper for all operations
message StandardResponse {
    ResponseStatus status = 1;
    string request_id = 2;
    google.protobuf.Timestamp timestamp = 3;
    map<string, string> metadata = 4;
}

enum ResponseStatus {
    SUCCESS = 0;
    FAILED = 1;
    PARTIAL = 2;
    CANCELLED = 3;
}

// Execution statistics for monitoring
message ExecutionStats {
    int64 rows_processed = 1;
    int64 bytes_processed = 2;
    int64 execution_time_ms = 3;
    int64 cpu_time_ms = 4;
    int64 memory_peak_mb = 5;
    int64 network_bytes_sent = 6;
    int64 network_bytes_received = 7;
}

// Data partition information
message DataPartition {
    string partition_id = 1;
    string table_location = 2;
    repeated string data_files = 3;
    int64 estimated_rows = 4;
    int64 estimated_bytes = 5;
    map<string, string> partition_values = 6;
}

// Worker health and resource information
message WorkerInfo {
    string worker_id = 1;
    string endpoint = 2;
    WorkerStatus status = 3;
    ResourceInfo resources = 4;
    google.protobuf.Timestamp last_heartbeat = 5;
}

enum WorkerStatus {
    HEALTHY = 0;
    UNHEALTHY = 1;
    DRAINING = 2;
    OFFLINE = 3;
}

message ResourceInfo {
    int32 cpu_cores = 1;
    int64 memory_mb = 2;
    int64 disk_mb = 3;
    int32 active_queries = 4;
    double cpu_utilization = 5;
    double memory_utilization = 6;
}